<resources>
    <string name="app_name">jsnolan</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="data_entry">Data Entry</string>
    <string name="weekly_summary">Weekly Summary</string>

    <string name="activity_duration">Activity Duration:</string>
    <string name="activity_duration_hint">Enter Duration in Minutes</string>
    <string name="activity_intensity">Activity Intensity:</string>
    <string name="activity_type">Activity Type:</string>
    <string name="activity_date">Activity Date:</string>
    <string name="title_activity_data_entry_screen">DataEntryScreen</string>
    <string name="title_activity_weekly_summary_screen">WeeklySummaryScreen</string>
    <string name="update">Update</string>
    <string name="data_updated"></string>
    <string name="total_duration"></string>
    <string name="total_moderate_duration"></string>
    <string name="total_vigorous_duration"></string>
    <string name="total_met_minutes"></string>
    <string name="recommended_met_minutes"></string>
    <string name="main_screen"><b>Exercise Tracker</b></string>
    <string name="empty_weekly_summary">No entries yet!</string>
    <string name="app_description">An android application to help you reach your fitness goals.</string>
    <string name="moderateIntensity">Moderate</string>
    <string name="vigorousIntensity">Vigorous</string>
</resources>
