<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <TextView android:text="@string/main_screen"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textSize="35dp"
        android:gravity="center"/>

    <TextView android:text="@string/app_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:gravity="center"/>

    <Button android:id="@+id/data_entry_button"
        android:layout_height="100dp"
        android:layout_width="fill_parent"
        android:text="@string/data_entry"
        android:textSize="25dp">
    </Button>

    <Button android:id="@+id/weekly_summary_button"
        android:layout_height="100dp"
        android:layout_width="fill_parent"
        android:text="@string/weekly_summary"
        android:textSize="25dp">
    </Button>

</LinearLayout>